<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/WelcometextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/welcome_to_moodzilla"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"/>

    <TextView
        android:id="@+id/QoutetextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/leave_your_worries_behind"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcometextView"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="164dp"
        android:onClick="newAct"
        android:text="Let's Start!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QoutetextView"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="61dp"
        android:layout_marginStart="314dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/WelcometextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wink" />
</androidx.constraintlayout.widget.ConstraintLayout>


