<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MoodActivity">
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="?attr/background"/>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--first images with 2 icons-->

            <TextView
                android:id="@+id/moodtodaytextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/choose_a_feeling"
                android:textColor="@color/purple_700"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <!--first icon-->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/happyimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Happy"
                        android:src="@drawable/happy_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/happyimage"
                        android:layout_centerHorizontal="true"
                        android:text="Happy"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <!--second icon-->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/sadimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Sad"
                        android:src="@drawable/sad_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sadimage"
                        android:layout_centerHorizontal="true"
                        android:text="Sad"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>


            <!--second with 2 other images-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <!--third icon-->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/surpriseimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Surprise"
                        android:src="@drawable/surprise_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/surpriseimage"
                        android:layout_centerHorizontal="true"
                        android:text="Surprise"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <!--4th icon-->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/fearimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Fear"
                        android:src="@drawable/fear_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fearimage"
                        android:layout_centerHorizontal="true"
                        android:text="Fear"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>


            <!--third of other icons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <!--fifth icon-->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/calmimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Calm"
                        android:src="@drawable/calm_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/calmimage"
                        android:layout_centerHorizontal="true"
                        android:text="Calm"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <!--6th icon-->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/disgustimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Disgust"
                        android:src="@drawable/disgust_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/disgustimage"
                        android:layout_centerHorizontal="true"
                        android:text="Disgust"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <!--fourth other icons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <!--7th icon-->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/contemptimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Contempt"

                        android:src="@drawable/contempt_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/contemptimage"
                        android:layout_centerHorizontal="true"

                        android:text="Contempt"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <!--8th icon-->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/angryimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:onClick="Angry"
                        android:src="@drawable/angry2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/angryimage"
                        android:layout_centerHorizontal="true"

                        android:text="@string/angry"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemBackground="@color/purple_500"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottomnav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>
